test: itemService, stuffService, historyService의 requester test 범위를 넓힘